--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-    "functions": {
-        "api/*.php": {
-            "runtime": "vercel-php@0.3.0"
-        }
-    }
-}  
+    "builds": [
+      {
+        "src": "Dockerfile",
+        "use": "@vercel/docker"
+      }
+    ]
+  }
+  
